Salesman entity, associations and findAll method