@@ -1,6 +1,7 @@
 package com.miguelpazatto.leadsmanager.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
@@ -8,9 +9,11 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 
 import com.miguelpazatto.leadsmanager.entities.Lead;
+import com.miguelpazatto.leadsmanager.entities.Salesman;
 import com.miguelpazatto.leadsmanager.entities.enums.LeadClassification;
 import com.miguelpazatto.leadsmanager.entities.enums.LeadStatus;
 import com.miguelpazatto.leadsmanager.repositories.LeadRepository;
+import com.miguelpazatto.leadsmanager.repositories.SalesmanRepository;
 
 @Configuration
 @Profile("test")
@@ -19,12 +22,20 @@ public class TestConfig implements CommandLineRunner {
 	@Autowired
 	private LeadRepository leadRepository;
 	
+	@Autowired
+	private SalesmanRepository salesmanRepository;
+	
 	public void run(String... args) throws Exception {
 		
-		Lead l1 = new Lead(null, "Miguel", "miguel@email.com", "994568812", 20, LeadStatus.NEW, LeadClassification.HOT);
-		Lead l2 = new Lead(null, "Igor", "igor@email.com", "993876431", 20, LeadStatus.CONTACTED, LeadClassification.WARM);
+		Salesman s1 = new Salesman(null, "Rodrigo", "rodrigo@email.com", "998456728");
+		Salesman s2 = new Salesman(null, "Vinicius", "vinicius@email.com", "997654382");
 		
-		leadRepository.saveAll(Arrays.asList(l1, l2));
+		salesmanRepository.saveAll(List.of(s1, s2));
+		
+		Lead l1 = new Lead(null, "Miguel", "miguel@email.com", "994568812", 20, LeadStatus.NEW, LeadClassification.HOT, s1);
+		Lead l2 = new Lead(null, "Igor", "igor@email.com", "993876431", 20, LeadStatus.CONTACTED, LeadClassification.WARM, s2);
+		
+		leadRepository.saveAll(List.of(l1, l2));
 		
 	}
 	
